--- a/bigops-web/src/main/webapp/WEB-INF/web.xml
+++ b/bigops-web/src/main/webapp/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 
 
     <welcome-file-list>
-        <welcome-file>/WEB-INF/view/login/login.jsp</welcome-file>
+        <welcome-file>/WEB-INF/view/index.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
