--- a/bigops-web/src/main/resources/prop/common.properties
+++ b/bigops-web/src/main/resources/prop/common.properties
@@ -1,5 +1,3 @@
 ############################################################################
-#######################存储用户自定义配置文件内容信息#######################
+#########################存储用户自定义配置文件内容信息#########################
 ############################################################################
-log.path=/usr/local/bigops
-log.level=DEBUG
