--- a/bigops-domain/pom.xml
+++ b/bigops-domain/pom.xml
@@ -17,5 +17,9 @@
             <groupId>com.ywb</groupId>
             <artifactId>bigops-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 </project>
